# tikki

./: CMakeLists.txt  LICENSE  README.md  index.html  main.cpp  package-lock.json  package.json  tikki.drawio
inc/tikki/: card.h  deck.h  hand.h  tikki.h
src/: card.cpp  deck.cpp  hand.cpp  main.js  style.css  tikki.cpp
test/: test.cpp
